# Akilli-Devriye-Robotu

./: .gitignore  README.md
src/patrol_robot/: package.xml  setup.py
src/patrol_robot/config/: waypoints.yaml  zones.yaml
src/patrol_robot/launch/: gazebo_only.launch.py  patrol_simulation.launch.py
src/patrol_robot/patrol_robot/: __init__.py  alert_manager.py  navigation_controller.py  object_spawner.py  patrol_node.py  zone_monitor.py
src/patrol_robot/scripts/: build_and_run.sh  test_nodes.sh
src/patrol_robot/worlds/: patrol_world.sdf
